# pasgtk4

./: .gitignore  README.md  meson.build
docs/: aur-install.md
docs/en/: README.md  api.md  examples.md
docs/ru/: README.md  api.md  examples.md
example/: README.md  example_main.pas
src/: main.pas  wrapper.pas
